knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Cell_Relationship_Configuration__c/pqcrush__Cell_Relationship_Configuration__c.object-meta.xml
<CustomObject>
    <description>Configuration data for records related to cells in a Cross Sell</description>
    <label>Cell Relationship Configuration</label>
    <nameField>
        <displayFormat>CRC-{0000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cell Relationship Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>