knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Cell_Relationship_Configuration__c/fields/pqcrush__Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Color__c</fullName>
    <defaultValue>&quot;#556677&quot;</defaultValue>
    <description>Hexadecimal color code value</description>
    <inlineHelpText>Color code in the form of #RRGGBB or #RGB (example: #FF0000 for red)</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>