knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Cell_Relationship_Configuration__c/fields/pqcrush__Display_Field__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Display_Field__c</fullName>
    <description>The API Name of the field you want to display in the cell that is on the object specified in this configuration</description>
    <inlineHelpText>If this field does not exist on the object or this field is left blank then the object&apos;s default name field will be used instead</inlineHelpText>
    <label>Display Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>