knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Cell_Relationship_Configuration__c/fields/pqcrush__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Object_API_Name__c</fullName>
    <description>The API name for the object you want to configure which has a relationship to the pqcrush__White_Space_Cell__c object</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>